--- a/help/engl/nemp_coverflow.html
+++ b/help/engl/nemp_coverflow.html
@@ -2,15 +2,10 @@
 <html>
 <head>
 
-
-  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+  <title>The Coverflow</title>
 
-  
 
-
-  
-  <title>Der Coverflow in Nemp</title>
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -31,359 +26,251 @@ font-size: 12px;
 
 <body>
 
-
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-
 
   <tbody>
 
-
     <tr>
-
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
-
       <td>
-      
-      <h2 class="head">Der Coverflow</h2>
-
+      <h2 class="head">The Coverflow</h2>
 
       </td>
 
-
     </tr>
 
-
-  
   </tbody>
 </table>
 
-
 <hr style="width: 100%; height: 2px;"><br>
-<div style="text-align: center;"><img style="width: 378px; height: 245px;" alt="coverflow" src="browse_coverflow.jpg"><br>
-</div>
-<br>
-Der Coverflow in Nemp funktioniert eventuell etwas anders als in
-anderen Playern. Folgendes passiert f&uuml;r diese Anzeige:<br>
 
+<div style="text-align: center;"><img style="width: 378px; height: 245px;" alt="coverflow" src="browse_coverflow.jpg"><br>
+
+</div>
+
+<br>
+
+The Nemp Coverflow may work differnetly from other players. This is how
+the coverflow works in Nemp:<br>
 
 <ol>
 
+  <li>Every file is searched for embedded cover art. If a file
+contains embedded cover art, this one is used as a cover for this file.</li>
 
-  <li>Jede mp3-Datei wird nach einem Cover im ID3-Tag hin
-untersucht. Wenn eines vorhanden ist, wird das genommen.</li>
+  <li>If there is no embedded cover art (probably the case for
+more than 90%), Nemp searches for image files "nearby" (see below) the
+audio file.</li>
 
+  <li>If more than one image file is found, Nemp tries to get the
+"front cover". For this, the filenames are checked e.g. a file
+containing "front" or "folder" seems to be a good choice.</li>
 
-  <li>Wenn kein Cover im ID3-Tag vorhanden ist, wird auf der
-Festplatte "in der N&auml;he" zur Audiodatei nach Bildern gesucht.</li>
+  <li>All audio files, where Nemp has found the "same cover"
+(determined by the MD5-checksum of the image data), are grouped
+together as "one album".&nbsp;</li>
 
-
-  <li>Aus dieser Bilderliste wird dann das Bild genommen, was
-nach "Front-Cover" aussieht.&nbsp;</li>
-
-
-  <li>Alle Dateien, zu denen dasselbe Cover gefunden wurde,
-werden unter diesem Cover gruppiert.</li>
-
-
-  <li>Wenn zu einer Datei kein Cover gefunden werden kann, wird
-nach Ordner gruppiert.</li>
-
+  <li>If no images can be found, all files in one directory are
+grouped together as "one album".</li>
 
 </ol>
 
-
-"In der N&auml;he" l&auml;sst sich in den Einstellungen genauer
-angeben. Voreingestellt ist dieses Suchverhalten:<br>
-
+"Nearby" depends on the settings (File management -&gt; Cover ).
+Default setting is<br>
 
 <ul style="list-style-type: circle;">
 
+  <li>Search in the directory of the audio file itself</li>
 
-  <li>Suche im Ordner der Audiodatei</li>
+  <li>Search in a subdirectory named "cover"</li>
 
+  <li>Search in the parent directory (only if the parent
+directory contains only a few directories)&nbsp;</li>
 
-  <li>Suche in einem Unterordner mit "cover" im Ordnernamen</li>
-
-
-  <li>Suche im &uuml;bergeordneten Ordner (falls dort nicht
-zuviele Dateien/Ordner enthalten sind)</li>
-
-
-  <li>Suche in einem Unterordner des &uuml;bergeordneten
-Ordners ("Nachbarordner") mit "cover" im Namen (falls der
-&uuml;bergeordnete Ordner nicht zuviele Dateien/Ordner
-enth&auml;lt)</li>
-
+  <li>Search in a subdirectory of the parent directory named
+"cover" (only if the parent directory contains only a few
+directories)&nbsp;</li>
 
 </ul>
 
-
-Idee dahinter sind folgende F&auml;lle, in
-denen&nbsp;erfolgreich das passende Bild zu den Liedern gefunden
-wird.<br>
-
+This covers the following cases how you may store your cover art on
+your hard disk:<br>
 
 <span style="font-family: monospace;"></span><span style="font-family: monospace;"><br>
-
 
 </span>
 <table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2">
 
-
   <tbody>
-
 
     <tr>
 
-
-      <td><span style="font-family: monospace;">c:\EinAlbum<br>
-
+      <td><span style="font-family: monospace;">c:\SomeAlbum<br>
 
 &nbsp; \Track 1.mp3<br>
 
-
       </span><span style="font-family: monospace;">&nbsp;
 \</span><span style="font-family: monospace;">Track</span><span style="font-family: monospace;"> 2.mp3</span><br>
-
 
       <span style="font-family: monospace;"></span><span style="font-family: monospace;">&nbsp; \front.jpg</span></td>
 
-
-      <td><span style="font-family: monospace;">c:\EinAlbum<br>
-
+      <td><span style="font-family: monospace;">c:\SomeAlbum<br>
 
 &nbsp; \Cover<br>
 
-
 &nbsp; &nbsp;&nbsp;&nbsp;</span><span style="font-family: monospace;">\front.jpg</span><br>
 
-
       <span style="font-family: monospace;">&nbsp; </span><span style="font-family: monospace;">\</span><span style="font-family: monospace;">Track</span><span style="font-family: monospace;"> 1.mp3<br>
-
 
       </span><span style="font-family: monospace;">&nbsp;
 \</span><span style="font-family: monospace;">Track</span><span style="font-family: monospace;"> 2.mp3</span><br>
 
-
       <span style="font-family: monospace;">&nbsp;&nbsp;<br>
-
 
       </span><span style="font-family: monospace;">&nbsp;&nbsp;
 &nbsp;&nbsp;</span></td>
 
-
-      <td><span style="font-family: monospace;">c:\EinDoppelAlbum<br>
-
+      <td><span style="font-family: monospace;">c:\SomeMultiDiskAlbum<br>
 
 &nbsp; \CD 1<br>
 
-
 &nbsp; &nbsp;&nbsp; \</span><span style="font-family: monospace;">Track</span><span style="font-family: monospace;"> 1.mp3<br>
-
 
 &nbsp; \CD 2<br>
 
-
       </span><span style="font-family: monospace;">&nbsp;&nbsp;
 &nbsp; \</span><span style="font-family: monospace;">Track</span><span style="font-family: monospace;"> 2.mp3</span><br>
-
 
       <span style="font-family: monospace;"></span><span style="font-family: monospace;">&nbsp; \front.jpg</span></td>
 
-
-      <td><span style="font-family: monospace;"></span><span style="font-family: monospace;"></span><span style="font-family: monospace;">c:\EinDoppelAlbum<br>
-
+      <td><span style="font-family: monospace;"></span><span style="font-family: monospace;"></span><span style="font-family: monospace;">c:\Some MultiDiskAlbum<br>
 
 &nbsp; \CD 1<br>
 
-
 &nbsp; &nbsp;&nbsp; \</span><span style="font-family: monospace;">Track</span><span style="font-family: monospace;"> 1.mp3<br>
-
 
 &nbsp; \CD 2<br>
 
-
       </span><span style="font-family: monospace;">&nbsp;&nbsp;
 &nbsp; \</span><span style="font-family: monospace;">Track</span><span style="font-family: monospace;"> 2.mp3</span><br>
-
 
       <span style="font-family: monospace;">&nbsp;&nbsp;\Cover
       <br>
 
-
       </span><span style="font-family: monospace;">&nbsp;&nbsp;
 &nbsp; \front.jpg</span></td>
 
-
     </tr>
 
-
-  
   </tbody>
 </table>
 
+<br>
 
 <br>
 
+<br>
 
-F&uuml;r das Front-Cover wird eine Datei gesucht, die ein "front",
-ein "_a" oder ein "folder" im Namen hat (mit dieser Priorit&auml;t).<br>
+<span style="font-weight: bold;">Sorting the Coverflow</span><br>
 
+You can change the order of the albums in the coverflow by sorting.
+Just use the context menu and choose "Browse by -&gt; ...". <br>
+
+Note that the artist of a sampler is just "Various Artists".<br>
 
 <br>
 
+<br>
+
+<span style="font-weight: bold;">Download of missing covers</span><br>
+
+If no cover art can be found, Nemp can try to find a proper image
+online. For this the API of LastFM is used, which is also used for
+scrobbling.<br>
 
 <br>
 
-
-<span style="font-weight: bold;">Coverflow sortieren</span><br>
-
-
-Sie k&ouml;nnen die Reihenfolge des Coverflows &auml;ndern, indem Sie
-wie in der klassischen Ansicht &uuml;ber das Men&uuml; w&auml;hlen
-"Browsen nach -&gt; ...".<br>
-
-
-Beachten Sie dabei, dass dabei der Interpret oder der Albumname des
-ganzen Albums genommen wird - bei einem Sampler ist der Interpret dann
-sehr oft "Various Artists".<br>
-
+If the LastFM API was&nbsp;used to display a cover, Nemp will add a
+small icon to the cover to give you some feedback whether the download
+was successful (or not):<br>
 
 <br>
-
-
-<br>
-
-
-<span style="font-weight: bold;">Nachladen von Covern aus
-dem Internet</span><br>
-
-
-Wenn kein Cover zu einem Lied gefunden wird, dann kann Nemp im Internet
-nach einem passenden Cover suchen. Hierf&uuml;r nutzt Nemp die API
-von LastFM, die auch f&uuml;r das Scrobbeln genutzt wird.<br>
-
-
-<br>
-
-
-Wenn die API gerade f&uuml;r die Anzeige eines Covers genutzt
-wurde, blendet Nemp ein kleines Symbol zu dem Cover ein:<br>
-
-
-<br>
-
 
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 
-
   <tbody>
 
-
     <tr>
-
 
       <td style="width: 30px;"><img src="lastfmOK.png" alt=""></td>
 
-
-      <td>Das Cover wurde gerade eben erfolgreich von LastFM
-heruntergeladen und
-gespeichert. Eine Kopie&nbsp;davon findet sich jetzt auch bei den
-Audiodateien im Ordner.</td>
-
+      <td>The cover has been found and downloaded. A copy of this
+image is now stored in the directory of the audio file (named&nbsp;"front
+(NempAutoCover).jpg", sometimes *.png) .</td>
 
     </tr>
 
-
     <tr>
-
 
       <td><img src="lastfmFail.png" alt=""></td>
 
-
-      <td>Es konnte auch bei LastFM kein
-Cover gefunden werden. Das passiert bei exotischen Alben und (leider)
-sehr oft auch bei Samplern.</td>
-
+      <td>Nemp was not able to find a matching cover. This
+happens for uncommon albums and (unfortunately) quite often for samplers</td>
 
     </tr>
 
-
     <tr>
-
 
       <td><img src="lastfmCache.png" alt=""></td>
 
-
-      <td>Die Anfrage an LastFM wurde nicht durchgef&uuml;hrt, da vor
-kurzem schon einmal ein Versuch fehlgeschlagen ist. Es wird dann im
-Tages- sp&auml;ter im Wochenrhythmus nochmal nachgefragt, bis die
-Coversuche f&uuml;r dieses Album dann komplett eingestellt wird.</td>
-
+      <td>The query to LastFM was skipped, as the same query
+failed earlier. Nemp will try it again a few times later (next
+day/week). If the query is failing all the time, Nemp will block
+further queries for that album completely (until the cover cache is
+cleared, Settings -&gt; File management -&gt; Cover).</td>
 
     </tr>
 
-
     <tr>
-
 
       <td><img src="lastfmConnectError.png" alt=""></td>
 
-
-      <td>Es konnte keine Verbindung zu LastFM hergestellt werden. In
-der Regel liegt das einer fehlenden Internetverbindung oder an den
-Einstellungen Ihrer Firewall.</td>
-
+      <td>No connection to the LastFM webservice. You should
+check your internet or firewall settings.</td>
 
     </tr>
-
 
     <tr>
 
-
       <td><img src="lastfmInvalid.png" alt=""></td>
 
-
-      <td>Dieses Symbol erscheint nicht im Coverflow, sondern nur in
-der Coveranzeige des Players. Es deutet an, dass zu den Dateien, die
-sich im selben Ordner wie das aktuelle St&uuml;ck befinden, keine
-einheitliche Album-Information gefunden werden kann. In diesem Fall
-wird die Suche bei lastFM nicht durchgef&uuml;hrt.</td>
-
+      <td>Used in the player, if Nemp was not able to find proper
+"Album information" for the current track. If Nemp is unsure about the
+album (e.g. the file is not in contained in the medialibrary), the
+LastFM query is skipped.</td>
 
     </tr>
 
-
-  
   </tbody>
 </table>
 
-
-Die heruntergeladene Datei bekommt den Namen "front (NempAutoCover).jpg" (manchmal auch mit der Endung .png)<br>
-
+<br>
 
 &nbsp;<br>
 
-
 &nbsp;<br>
 
+<br>
 
 <br>
 
+<br>
 
 <br>
 
-
 <br>
-
-
-<br>
-
-
-<br>
-
 
 </body>
 </html>
