--- a/help/nemp_medienbib.html
+++ b/help/nemp_medienbib.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 
+
   
 
 
+  
+  
   
   <title>Nemp: Die Medienbibliothek</title>
   <style title="" media="" type="text/css">
@@ -29,35 +34,47 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Die Medienbibliothek</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 
 Nemp kann auf Ihrem Computer nach Audiodateien suchen, diese in einer
@@ -67,13 +84,17 @@ gew&uuml;nschten Titel und k&ouml;nnen ihn der Playlist
 hinzuf&uuml;gen.<br>
 
 
-<br>
 
 <br>
+
+
+<br>
+
 
 
 <span style="font-weight: bold;">Computer nach
 Audiodateien untersuchen</span><br>
+
 
 
 W&auml;hlen Sie im Men&uuml; "Medienbibliothek -&gt;
@@ -83,19 +104,24 @@ inklusive aller Unterordner und sortiert gefundene Audiodateien in die
 Medienbibliothek ein.<br>
 
 
+
 Dieser Vorgang kann eine ganze Zeit lang dauern - Nemp schafft
 ungef&auml;hr 20-40 Dateien pro Sekunde. Sie k&ouml;nnen Nemp
 aber w&auml;hrenddessen weiter benutzen - auch wenn einiges dann
 nicht ganz so fl&uuml;ssig l&auml;uft.<br>
 
 
-<br>
 
 <br>
+
+
+<br>
+
 
 
 <span style="font-weight: bold;">Browsen in der
 Medienbibliothek</span><br>
+
 
 
 Es gibt drei grundlegende M&ouml;glichkeiten, in der
@@ -103,16 +129,21 @@ Medienbibliothek zu st&ouml;bern. Sie k&ouml;nnen zwischen den
 drei Browsemodi mit den Buttons im oberen Bereich umschalten.<br>
 
 
+
 <br>
+
 
 
 <div style="text-align: center;"><img style="width: 72px; height: 24px;" alt="browsebuttons" src="TabBtnBrowse.png"><br>
 
 
+
 </div>
 
 
+
 <br>
+
 
 
 Die <span style="font-weight: bold;">"klassische Ansicht"</span> war zuerst da. Hier wird die Medienbibliothek
@@ -124,12 +155,15 @@ vertreten ist, und in der gro&szlig;en Liste unten alle Titel
 dieses Interpreten.<br>
 
 
+
 &Uuml;ber das Kontextmen&uuml; "Browsen nach -&gt; ..."
 k&ouml;nnen Sie ausw&auml;hlen, nach welchen Kriterien sie in
 dieser Ansicht st&ouml;bern wollen.<br>
 
 
+
 <span style="font-style: italic;"><br>
+
 
 
 </span>Der <span style="font-weight: bold;">"Coverflow"</span> sortiert die Lieder nach Covern. Hierzu
@@ -138,15 +172,19 @@ die&nbsp;Musikdateien, sondern sucht zu jedem Lied auch ein
 passendes Cover auf der Platte. <br>
 
 
+
 Hierzu nimmt Nemp an, dass die Ordnerstruktur in etwa der Albenstruktur
 entspricht, d.h. Sie haben auf Ihrer Platte pro Album einen Ordner.<br>
+
 
 
 Wenn kein Cover gefunden wird, kann Nemp im Internet nach einem
 passenden Cover suchen.<br>
 
 
+
 <br>
+
 
 
 In der <span style="font-weight: bold;">"Tagwolke"</span> werden alle Eigenschaften wie Interpret, Album, Genre,
@@ -158,16 +196,21 @@ doppelt anklicken, wird eine neue Tagwolke gebildet, die nur Titel mit
 diesem Tag ber&uuml;cksichtigt.<br>
 
 
-<br>
 
 <br>
+
+
+<br>
+
 
 <span style="font-weight: bold;">Die Schnellsuche</span><br>
+
 
 Wenn Sie einen bestimmten Titel h&ouml;ren wollen, dann k&ouml;nnen Sie
 daf&uuml;r die Schnellsuche benutzen. Fangen Sie einfach an zu tippen,
 und Nemp zeigt Ihnen w&auml;hrend des Tippens alle Titel an, die dazu
 passen. <br>
+
 
 <span style="font-style: italic;">Tip: In der Voreinstellung werden
 "w&auml;hrend des Tippens" nur exakte Treffer aufgelistet. Wenn Sie die
@@ -177,39 +220,49 @@ auch Titel von "P!nk" &nbsp;gefunden, wenn Sie nach "Pink" gesucht
 haben. Und wenn Sie sich nicht sicher sind, wieviele r, s und t in
 "Alanis Morissette" vorkommen, ist das auch nicht schlimm.</span><br style="font-style: italic;">
 
-<br>
 
 <br>
+
+
+<br>
+
 
 <span style="font-weight: bold;">
 Von der Medienliste in die Playlist</span><br>
+
 
 
 Sie k&ouml;nnen dann einen einzelnen Titel, oder ein ganzes Album (oder was sonst grade in der Browseliste angezeigt wird)
 in die Playlist einf&uuml;gen - entweder &uuml;ber das
 Kontextmen&uuml; oder per Drag&amp;Drop.<br>
 
+
 Wenn Sie in der unteren Liste einen Titel doppelt anklicken, dann
 passiert das, was Sie in den Optionen als Standard-Aktion eingestellt
 haben.<br>
 
+
 <ul style="list-style-type: circle;">
+
 
   <li>In die Playlist einf&uuml;gen (Voreinstellung). Der Titel wird ans Ende der Playlist angeh&auml;ngt</li>
 
+
   <li>Abspielen (und alte Playlist l&ouml;schen). Die aktuelle Playlist wird geleert und eine neue begonnen.</li>
 
+
   <li>Einf&uuml;gen hinter den aktuellen Titel.&nbsp;Nach dem aktuellen
-Titel einf&uuml;gen. Der neue Titel wird dann in die Vormerkliste
-eingef&uuml;gt, damit er auch wirklich als n&auml;chstes abgespielt
-wird.</li>
+Titel einf&uuml;gen.&nbsp;</li>
+
 
   <li>Einfach abspielen. Die Wiedergabe der Playlist wird unterbrochen
 und das Lied wird "einfach so" abgespielt. Wenn Sie im Player auf
 "n&auml;chstes Lied" klicken, setzt die Wiedergabe der Playlist an der
 unterbrochenen Stelle wieder ein.</li>
 
+
 </ul>
+
 
 
 <span style="font-style: italic;">Tip: Drag&amp;Drop
@@ -217,7 +270,9 @@ funktioniert auch aus dem Player heraus, um z.B. ein Lied auf einen
 mobilen mp3-Player zu kopieren.
 </span><br>
 
+
 <br>
+
 
 
 </body>
